# Indom

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.yaml  docker-compose.yml
apps/backend/: .env.example  pyproject.toml
apps/backend/app/: main.py
apps/backend/app/models/: schemas.py
apps/backend/app/routes/: api.py
apps/backend/app/services/: ai_engine.py  cv_parser.py  latex_builder.py  roadmap_builder.py  searxng_search.py
apps/frontend/: package-lock.json  package.json
apps/frontend/public/: site.webmanifest
apps/frontend/src/app/: globals.css  layout.tsx  page.tsx
apps/frontend/src/components/: HeaderClient.tsx  SettingsModal.tsx
apps/frontend/src/lib/: config.ts
docs/: SETUP.md  indom_docs.docx
miktex/bibtex/bib/oberdiek/: oberdiek-bundle.bib
miktex/doc/miktex/: miktex.chm  yap.chm
miktex/doc/miktex/manual/: about.html  advanced.html  autoinstall.html  configuring.html  defaults.html  envvars.html  findtexmf.html  howtoget.html  idx.html  index.html  initexmf.html  localadditions.html  localguide.html  miktex-bibtex.html  miktex-dvicopy.html  miktex-dvips.html  miktex-filesystem.html  miktex-filetypes.html  miktex-fndb.html  miktex-fontmaps.html  miktex-formats.html  miktex-gftodvi.html  miktex-languages.html  miktex-links.html  miktex-luatex.html  mpm.html  (+26 more)
miktex/miktex/config/: languages.ini  mpm.ini  packages.ini  scripts.ini  updmap.cfg
miktex/scripts/make4ht/: make4ht-char-def.lua  make4ht-mathml-char-def.lua
miktex/source/: parskip-src.tar.xz
searxng/: settings.yml
templates/: classic.tex
(+2052 files in other folders)
